declared top level dependencies and implemented first login mockup